# sagragest

./: .env.example  .gitignore  README.md  app.css  comandi.txt  command.note  cups.txt  docker-compose.yml  manage.py  package.json  prod.Dockerfile  pyproject.toml  requirements.txt  tailwind.config.js
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/management/commands/: admin.py  domain.py  runservertest.py  sadmin.py  setup_settings.py  user.py
accounts/templates/accounts/: .delete_these.txt  login.html  logout.html  password_change.html  password_reset.html  profile.html  profile_edit.html  register.html
core/: asgi.py  urls.py  utils.py  wsgi.py
core/settings/: base.py  dev.py  prod.py  test.py
core/settings/common/: apps.py  auth.py  database.py  internationalization.py  middleware.py  paths.py  static.py  templates.py
nginx/: nginx.conf
pos_driver/cups-thermo-printer-master/: rastertozj
pos_driver/cups-thermo-printer-master/ppd/: zj58.ppd  zj80.ppd
printers/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
printers/management/commands/: printers_cups.py
reports/: filters.py  urls.py  views.py
sagragest/: admin.py  apps.py  forms.py  models.py  resources.py  urls.py  utils.py  views.py
sagragest/templatetags/: filters.py
sagrarapid/: admin.py  apps.py  models.py  urls.py  views.py
script/: dev_setup.sh  prod_setup.sh  prod_start.sh  setup_fedora_server.sh  setup_sagragest.note  setup_ubuntu_server.sh
static/: output.css
templates/: 403.html  base.html  footer.html  index.html  message.html  navbar.html
(+30 files in other folders)
